送信データの記述を追記

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>会議室予約</title>
+<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
+
+  <div id="title_area" align="center"></div>
+  <h1>会議室予約</h1>
+  <div id="schedule_area">
+    <div class="year_month"></div>
+    <a href="javascript:void(0);" onClick="false">前月</a>
+     <span>2021年10月</span>
+     <a href="javascript:void(0);" onClick="false">翌月</a>
+  </div>
+
 </body>
 </html>
