--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <title>会議室予約</title>
 <link rel="stylesheet" type="text/css" href="./css/index.css">
