--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,13 +8,8 @@
 </head>
 <body>
 
-  <div id="title_area" align="center"></div>
-  <h1>会議室予約</h1>
-  <div id="schedule_area">
-    <div class="year_month"></div>
-    <a href="javascript:void(0);" onClick="false">前月</a>
-     <span>2021年10月</span>
-     <a href="javascript:void(0);" onClick="false">翌月</a>
+  <div id="title_area" align="center">
+    <h1>会議室予約</h1>
   </div>
 
 </body>
